<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EzCard</string>
    <string name="label_user">E-mail</string>
    <string name="label_password">Password</string>
    <string name="button_login">Log in</string>
    <string name="logo">Logo</string>
    <string name="forgot_password_label">I forgot my password</string>
    <string name="label_register">Register</string>
    <string name="title_toolbar_cards">Cards</string>
    <string name="title_toolbar_service">Services</string>
    <string name="menu_item_tarjetas">Cards</string>
    <string name="menu_item_ajustes">Settings</string>
    <string name="menu_item_servicios">Services</string>
    <string name="menu_item_ezcard">EZCard</string>
    <string name="menu_item_logout">Log out</string>
    <string name="user_mail_erro_msg">Incorrect mail or password</string>
    <string name="user_disabled">User disabled, please contact administrator</string>
    <string name="login_again_msg">Log in again with mail and password</string>
    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>
    <string name="label_phone">Phone</string>
    <string name="label_pin">PIN</string>
    <string name="label_next">Next</string>
    <string name="msg_register_success">An email will be sent to confirm the account</string>
    <string name="msg_register_fail">There was an error during the sign in. Try again later</string>
    <string name="label_send">Send</string>
    <string name="label_msg_recover">Send us your email to recover your account</string>
    <string name="msg_recover_success">We send you an email to recover your account</string>
    <string name="msg_recover_fail">There was an error while recovering your account</string>
    <string name="label_enter_data">Eneter your information</string>
    <string name="label_enter_passwpin">Enter an alphanumeric password and a 4 digit numeric PIN</string>
    <string name="warning_invalid_email_or_passw">E-mail or password incorrect</string>
    <string name="warning_invalid_passw">Password incorrect</string>
    <string name="warning_invalid_pin">Pin incorrect</string>
    <string name="warning_invalid_email">Not valid mail</string>
    <string name="warning_not_a_word">Not valid characters</string>
    <string name="warning_not_a_number">Enter only numbers</string>
    <string name="warning_logout">Are you sure you want to log out?</string>
    <string name="title_activity_main_drawer">EzCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">EzCard</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="delete_button_label">Delete</string>
    <string name="edit_button_label">Edit</string>
    <string name="acept_button">Acept</string>
    <string name="cancel_button">Cancel</string>
    <string name="warning_delete_card_msg">Are you sure you want to delete the card?</string>
    <string name="warning_delete_card_title">Delete card</string>
    <string name="enter_pin_to_delete_card">Enter the PIN to delete the card</string>
    <string name="delete_card_error">There was an error while trying to delete the card. Try again</string>
    <string name="error_log_in">There was an error while trying to log in</string>
    <string name="error_while_getting_user_data">There was an error while trying to retrieve the user data</string>
    <string name="select_icon">Select an icon for your card</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="enter_pin_to_edit_card">Ingrese el PIN para guardar los cambios</string>
    <string name="error_editing_card">There was an error while trying to edit the card</string>
    <string name="warning_name_card_notnull">The card name cannot be empty</string>
    <string name="warning_select_icon">You must select an icon for your card</string>
    <string name="hold_a_card_against_the_back_of_your_device">Hold a card against the back of your device</string>
    <string name="enter_pin_to_add_new_card">Enter PIN to add new card</string>
    <string name="You_need_to_enable_NFC">You need to enable NFC</string>
    <string name="no_nfc">No NFC technology detected on the device</string>
    <string name="error_while_trying_to_add_card">There was an error while trying to add the new card</string>
    <string name="service_unavailable">Service unavailable. Contact the service administrator</string>
    <string name="associated_card">Associated card</string>
    <string name="change_associated_card">Change associated card</string>
    <string name="delete_service">Delete service</string>
    <string name="no_card_associated">No card associated</string>
    <string name="disassociate_from_all_cards">Disassociate from card</string>
    <string name="Enter_pin_to_disassociate_service">Enter PIN to disassociate service from card</string>
    <string name="error_to_disassociate_service">There was an error while trying to disassociate the service</string>
    <string name="select_a_card_for_provider">Select a card to bind it to the service or unbind it</string>
    <string name="enter_pin_to_associate_service">Enter PIN to associate the service to the card</string>
    <string name="error_while_binding_the_service">There was an error while trying to bind the service to the card</string>
    <string name="enter_pin_to_delete_provider">Enter the PIN to delete the service</string>
    <string name="warning_delete_provider_msg">Are you sure you want to delete the service?</string>
    <string name="warning_delete_provider_title">Delete service</string>
    <string name="delete_provider_error">There was an error while trying to delete the service. Try again</string>
    <string name="validate_provider_error">There was an error while trying to access to the service. Try again</string>
    <string name="successful_access">Access successful</string>
    <string name="no_card_binded_to_service">The service has no card associated. Associate one first</string>
    <string name="app_security">App security</string>
    <string name="change_your_pin">Change your PIN</string>
    <string name="mail_on_settings">E-mail</string>
    <string name="contact_support">Contact support</string>
    <string name="ask_for_help">Ask for help</string>
    <string name="old_pin">Enter your PIN</string>
    <string name="enter_new_pin">Enter the new PIN</string>
    <string name="enter_new_pin_again">Enter the new PIN again</string>
    <string name="send">Send</string>
    <string name="reconfirmation_doesnt_match">New PIN reconfirmation do not match</string>
    <string name="success_change_pin">PIN change successful</string>
    <string name="error_change_pin">Error while changing the PIN</string>
    <string name="error_credential_serial_number">Card does not match with associated service</string>
    <string name="change_provider_name">Change name</string>
    <string name="enter_provider_new_name">Enter the new name for the service</string>
    <string name="provider_name">Service name</string>
    <string name="invalid_provider_new_name">The new name is not valid or is already in use</string>
    <string name="enter_pin_to_change_provider_name">Enter PIN to confirm the service new name</string>
    <string name="error_while_changing_provider_name">There was an error while changing the service name</string>
</resources>