<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_card"
            android:title="@string/menu_item_tarjetas" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_key"
            android:title="@string/menu_item_servicios" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_item_ajustes" />
    </group>
    <group
        android:id="@+id/groupLogout"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_item_logout"
            />
    </group>

</menu>