<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="48dp"
    tools:context=".RegisterStepOne">

    <TextView
        android:id="@+id/labelEnterData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="@string/label_enter_data"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/label_name"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/label_surname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editMailAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/label_user"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/label_phone"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_estilo"
        android:text="@string/label_next"
        android:textColor="@color/colorWhite" />


</LinearLayout>