<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.acquanero.ezcard.ui.cards.CardsFragment"
        android:label="@string/menu_item_tarjetas"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.acquanero.ezcard.ui.services.ServiceFragment"
        android:label="@string/menu_item_servicios"
        tools:layout="@layout/fragment_service" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.acquanero.ezcard.ui.settings.SettingsFragment"
        android:label="@string/menu_item_ajustes"
        tools:layout="@layout/fragment_settings" />
</navigation>