<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".EnterPinToEditCard">

    <TextView
        android:id="@+id/labelWarningEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/enter_pin_to_edit_card"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputPin"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginBottom="25dp"
        android:hint="@string/label_pin"
        android:inputType="numberPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/boton_estilo"
            android:text="@string/cancel_button" />
        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/confirmEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:background="@drawable/boton_estilo_cancel"
            android:text="@string/delete_button_label" />

    </LinearLayout>

</LinearLayout>