<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditCardActivity">

    <ImageView
        android:id="@+id/imageCard"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_card" />

    <TextView
        android:id="@+id/textNameTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/cardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@color/colorDelete"
        android:layout_marginBottom="15dp"
        android:text="@string/delete_button_label" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="120dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="@color/colorLink"
        android:text="@string/edit_button_label" />

</LinearLayout>