<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".EnterPinToDeleteProvider">

    <TextView
        android:id="@+id/labelProviderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/labelWarningDeleteProvider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/enter_pin_to_delete_provider"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/inputPinDeleteProvider"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginBottom="25dp"
        android:hint="@string/label_pin"
        android:inputType="numberPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/cancelDeleteProviderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:layout_weight="1"
            android:background="@drawable/boton_estilo"
            android:textColor="@color/colorWhite"
            android:text="@string/cancel_button" />
        <Space
            android:layout_width="@dimen/margin_horizontal_accept_cancel"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/confirmDeleteProviderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/default_gap"
            android:background="@drawable/boton_estilo_cancel"
            android:textColor="@color/colorWhite"
            android:text="@string/acept_button" />

    </LinearLayout>
</LinearLayout>