<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="@dimen/margin_settings"
    android:padding="@dimen/padding_box_settigns"
    android:background="@drawable/button_with_border"
    tools:context=".ChangePinActivity" >

    <TextView
        android:id="@+id/labelOldPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_pin"
        android:textSize="@dimen/font_size_settings"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputOldPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_between_items_setting"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/labelNewPinOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_settings"
        android:textStyle="bold"
        android:text="@string/enter_new_pin" />

    <EditText
        android:id="@+id/inputNewPinOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_between_items_setting"
        android:inputType="numberPassword" />

    <TextView
        android:id="@+id/labelNewPinTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_settings"
        android:textStyle="bold"
        android:text="@string/enter_new_pin_again" />

    <EditText
        android:id="@+id/inputNewPinTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="@dimen/margin_between_items_setting"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/buttonSendNewPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/boton_estilo"
        android:textColor="@color/colorWhite"
        android:text="@string/send" />

</LinearLayout>